--- a/examples/addons_examples/html/shell/save.html
+++ b/examples/addons_examples/html/shell/save.html
@@ -44,6 +44,7 @@
         from {transform: rotate(0deg);}
         to {transform: rotate(360deg);}
       }
+      
       #status {
         display: inline-block;
         vertical-align: top;
@@ -86,9 +87,8 @@
   <body>
 
     <div class="emscripten">
-      <input type="button" title="View the main canvas in fullscreen mode" value="Fullscreen" onclick="Module.requestFullScreen(false,false)">
-	  <input type="file" title="Add local files to the browsable file system" multiple id="fileSelection_id" onchange="fileSelectionCallback();"/>	
-    </div>
+      <input type="button" title="View the main canvas in fullscreen mode" value="Fullscreen" onclick="Module.requestFullscreen(false,false)">
+	</div>
 
 
     <figure style="overflow:visible;" id="spinner"><div class="spinner"></div><center style="margin-top:0.5em"><strong>emscripten</strong></center></figure>
@@ -181,39 +181,6 @@
         };
       };
     </script>
-<script>
-      function fileExistsInMemoryFS(path) {
-        var statbuf = FS.stat(path);
-        if (!statbuf) return false;
-		return FS.isFile(statbuf.mode);
-      }
-      function saveFileToMemoryFS(e) {
-       try {
-           if (fileExistsInMemoryFS('/'+e.target.current_file_name)) FS.unlink('/'+e.target.current_file_name);          
-       }
-	   catch(err) {
-	    //document.getElementById("saveFileToMemoryFS").innerHTML = err.message;
-		}
-          var data=e.target.result;
-          FS.createDataFile(
-             '/', 	// thr root folder can be changed here
-			e.target.current_file_name, data, true, true, true
-          );
-          //Module.ccall('file_system_changed_callback');	// This function should be exposed by the C++ code
-      }
-
-      function fileSelectionCallback() {
-          var files = document.getElementById("fileSelection_id").files,
-          nFiles = files.length;
-          for (var nFileId = 0; nFileId < nFiles; nFileId++) {
-              var file=files[nFileId];
-              var reader = new FileReader();
-              reader.current_file_name = file.name;                            
-              reader.onload = saveFileToMemoryFS;
-              reader.readAsBinaryString(file);
-          }
-       }
-</script>
 
 
 <script src="FileSaver.js"> </script>
